[package]
name = "brooklands-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
scraper = "0.12.0"
md5 = "0.7.0"
mysql_async = "0.29.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
